# Core

./: .editorconfig  .gitignore  .travis.yml  Binder-vs2008.4.1.resharper  Binder-vs2008.sln  Binder.build  BreakingChanges.txt  CHANGELOG.md  CONTRIBUTING.md  Castle main limitations.txt  Castle-all-vs2008.sln  Castle.Core-NetCore.sln  Castle.Core-SL-vs2008.sln  Castle.Core-SL-vs2010.sln  Castle.Core-SL.sln  Castle.Core-VS2017.sln  Castle.Core-vs2008.5.0.ReSharper  Castle.Core-vs2008.sln  Castle.Core-vs2010.5.1.ReSharper  Castle.Core-vs2010.sln  Castle.Core.5.0.ReSharper  Castle.Core.5.1.ReSharper  Castle.Core.6.0.ReSharper  Castle.Core.6.1.ReSharper  Castle.Core.Mono.sln  Castle.Core.sln  Castle.Core.sln.DotSettings  Castle.Core.slnx  Castle.DynamicProxy2-vs2008.sln  Castle.DynamicProxy2.build  Changes.txt  ClickToBuild.cmd  Committers.txt  DictionaryAdapter-Changes.txt  DictionaryAdapter-Changes.txt~  DynamicProxy-Changes.txt  DynamicProxy-Readme.txt  DynamicProxy2-Silverlight.sln  How to build.txt  LICENSE  (+45 more)
ActiveRecord/: ActiveRecord-2.0.sln  ActiveRecord.sln  Castle.ActiveRecord-vs2003.sln  Castle.ActiveRecord-vs2005.resharper  Castle.ActiveRecord-vs2005.sln  Castle.ActiveRecord-vs2008.sln  Castle.ActiveRecord.Tests.dll.config  Changes.txt  Readme.txt  Running the test cases.txt  TODO.txt  activerecord.build
AspectSharp/: AspectSharp.key  (+3 more)
SharedLibs/net/1.1/: IBatisNet.Common.xml  IBatisNet.DataMapper.xml  Iesi.Collections.xml  Makefile.am  NHibernate.xml  NLog.xml  NLog.xsd  Nullables.NHibernate.xml  Nullables.xml  SqlMapConfig.xsd  nunit.framework.license.txt
(+15727 files in other folders)
